<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/white">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary">

            <Button
                android:id="@+id/back"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="left"
                android:background="@drawable/ic_arrow_back_black_24dp" />

            <TextView
                android:id="@+id/tv_title"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:paddingLeft="10dp"
                android:text="Registration"
                android:textColor="@color/white"
                android:textSize="@dimen/header_size"
                android:textStyle="bold" />
        </androidx.appcompat.widget.Toolbar>

        <LinearLayout
            tools:ignore="MissingConstraints"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/toolbar"
            android:orientation="vertical"
            android:padding="10dp">

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.Shrine.TextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/shr_fn">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/fn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:maxLength="30"
                    android:textSize="18sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/spinner_boarder">

                <Spinner
                    android:id="@+id/sp_gendar"
                    android:layout_width="match_parent"
                    android:layout_height="42dp"
                    android:layout_gravity="center"
                    android:background="@null"
                    android:entries="@array/type_gendar"
                    android:gravity="center"
                    android:overlapAnchor="false"
                    android:spinnerMode="dropdown" />

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_gravity="center|end"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="4dp"
                    android:padding="5dp"
                    android:src="@mipmap/ic_down_arrow" />
            </FrameLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.Shrine.TextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/shr_email_ph">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/email_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:maxLines="1" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.Shrine.TextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/shr_mbl">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/mbl_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:maxLength="10"
                    android:maxLines="1" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.Shrine.TextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/shr_pwd">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/pwd"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:maxLength="30"
                    android:textSize="18sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">

                            <Switch
                                android:id="@+id/switch1"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="Address"
                                android:textColor="#000000"
                                android:textSize="18sp" />

                        </LinearLayout>
                    </LinearLayout>

                </LinearLayout>

                <EditText
                    android:id="@+id/et_cur_addrs"
                    android:layout_width="match_parent"
                    android:layout_height="110dp"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/edittext_bg"
                    android:gravity="top"
                    android:inputType="textMultiLine"
                    android:maxLines="4"
                    android:paddingLeft="5dp"
                    android:paddingRight="15dp"
                    android:paddingTop="5dp"
                    android:scrollbars="horizontal"
                    android:textColor="@color/black" />
            </LinearLayout>

            <Button
                android:id="@+id/next_signup"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="25dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/btn_rounded"
                android:text="@string/shr_button_reg"
                android:textColor="@color/white" />

            <com.google.android.gms.ads.AdView
                android:id="@+id/ad_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_alignParentBottom="true"
                app:adSize="BANNER"
                app:adUnitId="@string/banner_ad_unit_id"/>

        </LinearLayout>

    </RelativeLayout>

</ScrollView>